horizontal scrolling on mobile bug fixed

--- a/client/src/styles/pages/_details.scss
+++ b/client/src/styles/pages/_details.scss
@@ -203,6 +203,11 @@
     overflow-x: scroll;
     scroll-snap-type: x mandatory;
 
+    @include respond(phone) {
+      width: 90%;
+      grid-column-gap: 6rem;
+    }
+
     &__card {
       width: 30rem;
       scroll-snap-align: center;
